@@ -20,7 +20,8 @@ enum
 
 	PALADIN_TOGGLE_ERRORS = 'PTgE',
 	PALADIN_FIND_AND_OPEN_FILE = 'PFaO',
-	PALADIN_SHOW_FIND_AND_OPEN_PANEL = 'PShF'
+	PALADIN_SHOW_FIND_AND_OPEN_PANEL = 'PShF',
+	PALADIN_SHOW_FIND_IN_PROJECT_FILES = 'PFif'
 };
 
 #endif
