@@ -51,7 +51,8 @@ enum
 	M_SHOW_ERROR_WINDOW = 'PShE',
 	M_SHOW_ADD_NEW_PANEL = 'PSnP',
 	M_SHOW_FIND_AND_OPEN_PANEL = 'PShF',
-	M_FIND_AND_OPEN_FILE = 'PFaO'
+	M_FIND_AND_OPEN_FILE = 'PFaO',
+	M_SHOW_FIND_IN_PROJECT_FILES = 'PFif'
 };
 
 #endif
